# py-s2client-proto

./: .gitignore  .gitmodules  README.md  THIRD_PARTY_NOTICES  generate_pb2.py  pyproject.toml
scripts/: generate_pb2.py
src/s2clientprotocol/: common_pb2.pyi  data_pb2.pyi  debug_pb2.pyi  error_pb2.pyi  query_pb2.pyi  raw_pb2.pyi  sc2api_pb2.pyi  score_pb2.pyi  spatial_pb2.pyi  ui_pb2.pyi
tests/: test_pb2.py
