[project]
name = "pys2clientprotocol"
version = "1.0.2"
description = "Prebuilt Python protobuf files for the StarCraft II client protocol"
requires-python = ">=3.9"
dependencies = ["protobuf>=6,<8"]
license = "MIT"
readme = "README.md"

[project.optional-dependencies]
build = ["grpcio-tools", "mypy-protobuf"]
test = ["pytest"]

[project.urls]
Homepage = "https://github.com/maxnus/py-s2client-proto"
Repository = "https://github.com/maxnus/py-s2client-proto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["src/s2clientprotocol/**", "pyproject.toml", "README.md", "LICENSE", "THIRD_PARTY_NOTICES"]
exclude = ["external/**"]

[tool.hatch.build.targets.wheel]
packages = ["src/s2clientprotocol"]
